fixed display err on small screen

--- a/css/style.scss
+++ b/css/style.scss
@@ -2,6 +2,12 @@
     padding: 0;
     margin: 0;
 }
+@media screen and (max-width: 400px) {
+    .footer ul {
+        flex-wrap: wrap;
+        // font-size: 14px;
+    }
+}
 .title {
     text-align: center;
     font-family: "宋体";
@@ -58,6 +64,7 @@
 }
 .content-box {
     width: 600px;
+    max-width: 80%;
     margin: 15px auto;
     perspective: 800px;
     min-height: 250px;
@@ -112,6 +119,14 @@
                 border-color: orangered;
             }
         }
+        span {
+            display: inline-block;
+            margin-left: 15px;
+            width: 90%;
+            &.del {
+                text-decoration: line-through;
+            }
+        }
         button {
             padding: 0 10px;
             background-color: transparent;
@@ -123,13 +138,6 @@
                 cursor: pointer;
                 background-color: black;
                 color: #fff;
-            }
-        }
-        span {
-            display: inline-block;
-            width: 90%;
-            &.del {
-                text-decoration: line-through;
             }
         }
 
@@ -171,12 +179,14 @@
 }
 .footer ul {
     width: 600px;
+    max-width: 80%;
     margin: 55px auto;
     display: flex;
     justify-content: space-around;
     border-top: 2px dashed #000;
     padding-top: 25px;
     li {
+        text-align: center;
         list-style: none;
         padding: 5px;
         border-radius: 5px;
